[gd_scene load_steps=14 format=2]

[ext_resource path="res://GameHUDRelated/RightSidePanel/TowerInformationPanel/InfoPanelComponents/TowerColorsPanel/TowerColorsPanel.gd" type="Script" id=1]
[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://GameHUDRelated/RightSidePanel/TowerInformationPanel/InfoPanelComponents/TowerColorsPanel/TowerColorsPanel_Header_Background.png" type="Texture" id=3]
[ext_resource path="res://GameHUDRelated/RightSidePanel/TowerInformationPanel/InfoPanelComponents/TowerColorsPanel/TowerColorsPanel_Body_Background.png" type="Texture" id=4]
[ext_resource path="res://GameHUDRelated/RightSidePanel/TowerInformationPanel/InfoPanelComponents/TowerColorsPanel/TowerColorsPanel_BottomTopBorder.png" type="Texture" id=5]
[ext_resource path="res://GameHUDRelated/RightSidePanel/TowerInformationPanel/InfoPanelComponents/TowerColorsPanel/TowerColorsPanel_ColorCount_Background.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=7]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="Theme" id=6]
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = SubResource( 1 )
VScrollBar/styles/grabber_highlight = SubResource( 2 )
VScrollBar/styles/grabber_pressed = SubResource( 3 )
VScrollBar/styles/scroll = SubResource( 4 )
VScrollBar/styles/scroll_focus = SubResource( 5 )

[node name="TowerColorsPanel" type="MarginContainer"]
margin_right = 90.0
margin_bottom = 31.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 90.0
margin_bottom = 31.0
size_flags_horizontal = 6
size_flags_vertical = 2
custom_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 90.0
margin_bottom = 12.0

[node name="HeaderPanel" type="MarginContainer" parent="VBoxContainer/MarginContainer"]
margin_left = 15.0
margin_right = 75.0
margin_bottom = 12.0
size_flags_horizontal = 6

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/MarginContainer/HeaderPanel"]
margin_right = 60.0
margin_bottom = 12.0
texture = ExtResource( 3 )

[node name="Marginer" type="MarginContainer" parent="VBoxContainer/MarginContainer/HeaderPanel"]
margin_right = 60.0
margin_bottom = 12.0
custom_constants/margin_top = 2

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/HeaderPanel/Marginer"]
margin_top = 2.0
margin_right = 60.0
margin_bottom = 11.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Tower colors"
align = 1

[node name="CountPanel" type="MarginContainer" parent="VBoxContainer/MarginContainer"]
margin_left = 78.0
margin_right = 90.0
margin_bottom = 12.0
size_flags_horizontal = 10

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/MarginContainer/CountPanel"]
margin_right = 12.0
margin_bottom = 12.0
texture = ExtResource( 6 )

[node name="Marginer" type="MarginContainer" parent="VBoxContainer/MarginContainer/CountPanel"]
margin_right = 12.0
margin_bottom = 12.0
custom_constants/margin_top = 2

[node name="CountLabel" type="Label" parent="VBoxContainer/MarginContainer/CountPanel/Marginer"]
margin_top = 2.0
margin_right = 12.0
margin_bottom = 11.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "x"
align = 1

[node name="TopBorder" type="TextureRect" parent="VBoxContainer"]
margin_top = 12.0
margin_right = 90.0
margin_bottom = 13.0
size_flags_horizontal = 6
texture = ExtResource( 5 )

[node name="BodyPanel" type="MarginContainer" parent="VBoxContainer"]
margin_top = 13.0
margin_right = 90.0
margin_bottom = 30.0
size_flags_horizontal = 6

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/BodyPanel"]
margin_right = 90.0
margin_bottom = 17.0
texture = ExtResource( 4 )
stretch_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/BodyPanel"]
margin_right = 90.0
margin_bottom = 17.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 6 )

[node name="BodyMargin" type="MarginContainer" parent="VBoxContainer/BodyPanel/ScrollContainer"]
margin_top = 6.0
margin_right = 90.0
margin_bottom = 10.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_constants/margin_right = 3
custom_constants/margin_top = 3
custom_constants/margin_left = 3
custom_constants/margin_bottom = 1

[node name="SingleColorPanelVBox" type="VBoxContainer" parent="VBoxContainer/BodyPanel/ScrollContainer/BodyMargin"]
margin_left = 3.0
margin_top = 3.0
margin_right = 87.0
margin_bottom = 3.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BottomBorder" type="TextureRect" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 90.0
margin_bottom = 31.0
size_flags_horizontal = 6
texture = ExtResource( 5 )
